base.css: change monospace font for printing
Instead of MS Andale Mono, let's use open-source DejaVu Sans Mono

Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/base.css
+++ b/base.css
@@ -205,6 +205,6 @@ table-horizontal tbody > tr:last-child > td {
     .remark-code, .remark-inline-code {
         /* Can't get stupid Chromium to include the monospace fonts I want! */
         /* https://bugs.chromium.org/p/chromium/issues/detail?id=772482 */
-        font-family: 'Andale Mono';
+        font-family: 'DejaVu Sans Mono';
     }
 }
