--- a/base.css
+++ b/base.css
@@ -14,6 +14,7 @@ html {
 
 .remark-code, .remark-inline-code {
     font-family: 'Noto Sans Mono', monospace;
+    font-variant-ligatures: none;
 }
 
 h1, h2, h3 {
