--- a/base.css
+++ b/base.css
@@ -1,32 +1,40 @@
 /*
  * Fonts
  */
+
 @import 'fonts/fonts.css';
 
-/*
- * Rules
- */
-
-/* General font */
 html {
     font-family: 'Noto Sans', sans-serif;
 }
-
 .remark-code, .remark-inline-code {
     font-family: 'Noto Sans Mono', monospace;
     font-variant-ligatures: none;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
     font-weight: normal;
 }
 
-/* Margins */
+/* Optional classes for size (mimics LateX commands) */
+.Huge { font-size: 125%;  }
+.huge { font-size: 120%;  }
+.LARGE { font-size: 115%;  }
+.Large { font-size: 110%;  }
+.large { font-size: 105%;  }
+.small { font-size: 90%; }
+.footnotesize { font-size: 80%; }
+.scriptsize { font-size: 70%; }
+.tiny { font-size: 60%; }
+
+/*
+ * Margins
+ */
 h1 {
     margin-top: 0.0em;
     margin-bottom: 0.0em;
 }
-h2, h3 {
+h2, h3, h4 {
     margin-top: 0.0em;
     margin-bottom: 0.1em;
 }
@@ -43,27 +51,24 @@ li {
     margin-bottom: 0.2em;
 }
 
-/* Optional classes for size (mimics LateX commands) */
-.Huge { font-size: 125%;  }
-.huge { font-size: 120%;  }
-.LARGE { font-size: 115%;  }
-.Large { font-size: 110%;  }
-.large { font-size: 105%;  }
-.small { font-size: 90%; }
-.footnotesize { font-size: 80%; }
-.scriptsize { font-size: 70%; }
-.tiny { font-size: 60%; }
-
-/* Color */
-.red { color: red; }
-
-/* Images */
+/*
+ * Images (default width)
+ */
 .remark-slide-content img { width: 100%; }
 
-/* Code */
+/*
+ * Code (default background)
+ */
 .remark-inline-code {
     background-color: #F0F0F0;
 }
+
+/*
+ * Remarkjs classes
+ */
+
+/* Colored text */
+.red { color: red; }
 
 /* Vertical spacer (height of a line) */
 .lspacer { height: 1em; width: 100%; margin: 0; padding: 0; border: 0; display: block; }
@@ -77,15 +82,20 @@ li {
 .footnote { position: absolute; bottom: 12px; left: 20px; font-size: 80%; }
 .ref { color: red; vertical-align: super; font-size: 80%; }
 
-/* Quotes */
+/*
+ * Quote blocks
+ */
 blockquote {
     font-style: italic;
     padding-left: 15px;
     border-left: 3px solid #ccc;
 }
 
-/* Note preview */
-/* Only show the notes for the current slide, not for the next */
+/*
+ * Presenter mode
+ */
+
+/* Note preview: only show the notes for the current slide, not for the next */
 .remark-notes-area .remark-bottom-area .remark-notes-current-area {
     height: 100%;
 }
@@ -93,8 +103,7 @@ blockquote {
     height: 0%;
 }
 
-/* Slide preview */
-/* Show the current slide bigger than the next */
+/* Slide preview: show the current slide bigger than the next */
 /*
  * NOTE: deactivated for now because I don't need in my current lecture hall
  *
@@ -107,8 +116,13 @@ blockquote {
  * }
  */
 
-/* Tables */
-/* Code below taken from: https://github.com/yahoo/pure/blob/master/src/tables/css/tables.css  and adapted */
+/*
+ * Tables
+ *
+ * Code below taken from:
+ * https://github.com/yahoo/pure/blob/master/src/tables/css/tables.css and
+ * adapted for my needs
+ */
 
 table {
     /* Remove spacing between table cells (from Normalize.css) */
@@ -120,13 +134,6 @@ table {
 
 .center-table table {
     margin: 0 auto; /* or margin: 0 auto 0 auto */
-}
-
-table caption {
-    color: #000;
-    font: italic 85%/1 arial, sans-serif;
-    padding: 1em 0;
-    text-align: center;
 }
 
 table td,
@@ -153,24 +160,20 @@ table thead {
     vertical-align: bottom;
 }
 
-/*
-striping:
-   even - #fff (white)
-   odd  - #f2f2f2 (light gray)
-*/
+/* Even rows: transparent color */
 table td {
     background-color: transparent;
 }
+/* Odd rows: gray color */
 table-odd td {
-    background-color: #f2f2f2;
+    background-color: #f8f8f8;
 }
-
-/* nth-child selector for modern browsers */
 table tr:nth-child(2n-1) td {
-    background-color: #f2f2f2;
+    /* nth-child selector version for modern browsers */
+    background-color: #f8f8f8;
 }
 
-/* BORDERED TABLES */
+/* Bordered tables */
 table td {
     border-bottom: 1px solid #cbcbcb;
 }
@@ -178,7 +181,7 @@ table tbody > tr:last-child > td {
     border-bottom-width: 0;
 }
 
-/* HORIZONTAL BORDERED TABLES */
+/* Horizontal bordered tables */
 table-horizontal td,
 table-horizontal th {
     border-width: 0 0 1px 0;
@@ -192,8 +195,8 @@ table-horizontal tbody > tr:last-child > td {
  * For printing
  */
 @page {
-  size: 1024px 768px;
-  margin: 0;
+    size: 1024px 768px;
+    margin: 0;
 }
 @media print {
     .remark-slide-scaler {
