base.css: new rule to select nested levels for lists
Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/base.css
+++ b/base.css
@@ -27,6 +27,11 @@ h1, h2, h3, h4 {
 .scriptsize { font-size: 70%; }
 .tiny { font-size: 60%; }
 
+/* Make nested levels in lists be smaller */
+li > ul > li {
+    font-size: 95%;
+}
+
 /*
  * Margins
  */
