Add template toolkit macro for including C code source
Include the code from a filename, and print the name of the file in the
lower right corner of the pre/code area.

Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/base.css
+++ b/base.css
@@ -84,6 +84,9 @@ li {
 .footnote { position: absolute; bottom: 12px; left: 20px; font-size: 80%; }
 .ref { color: red; vertical-align: super; font-size: 80%; }
 
+/* Code filename */
+.cfilename { position: relative; top: calc(-1em - 10px) }
+
 /*
  * Quote blocks
  */
