Make lines wrap in pre block instead of overflow
Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/base.css
+++ b/base.css
@@ -10,6 +10,11 @@ html {
 .remark-code, .remark-inline-code {
     font-family: 'Noto Sans Mono', monospace;
     font-variant-ligatures: none;
+    /* Make the text wrap if lines are too long */
+    overflow-x: visible;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 h1, h2, h3, h4 {
