--- a/base.css
+++ b/base.css
@@ -7,10 +7,10 @@
 html {
     font-family: 'Noto Sans', sans-serif;
 }
+
 .remark-code, .remark-inline-code {
     font-family: 'Noto Sans Mono', monospace;
-    font-variant-ligatures: none;
-    /* Make the text wrap if lines are too long */
+    font-variant-ligatures: none; /* Make the text wrap if lines are too long */
     overflow-x: visible;
     white-space: pre-wrap;
     word-wrap: break-word;
