base.css: add top and bottom margins to tables by default
Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/base.css
+++ b/base.css
@@ -149,6 +149,8 @@ table {
     border-spacing: 0;
     empty-cells: show;
     border: 1px solid #cbcbcb;
+    margin-top: 0.5em;
+    margin-bottom: 0.3em;
 }
 
 .center-table table {
