--- a/base.css
+++ b/base.css
@@ -153,8 +153,9 @@ table {
     margin-bottom: 0.3em;
 }
 
-.center-table table {
-    margin: 0 auto; /* or margin: 0 auto 0 auto */
+.center table {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 table td,
