--- a/base.css
+++ b/base.css
@@ -81,13 +81,13 @@ li > ul > li {
 h1 {
     margin-top: 0.0em;
     margin-bottom: 0.0em;
-    border-bottom: 1px solid #DAAA00; /* 100% UDC gold */
-    color: #002855; /* 100% UCD blue */
+    border-bottom: 1px solid var(--ucd-gold-100);
+    color: var(--ucd-blue-100);
 }
 h2, h3, h4 {
     margin-top: 0.0em;
     margin-bottom: 0.1em;
-    color: #335379; /* 80% UCD blue */
+    color: var(--ucd-blue-80);
 }
 p, pre, img {
     margin-top: 0.5em;
@@ -145,7 +145,7 @@ li {
 blockquote {
     font-style: italic;
     padding-left: 15px;
-    border-left: 3px solid #ccc;
+    border-left: 3px solid var(--ucd-blue-10);
 }
 
 /*
