css: new .comment directive to put text in comment
Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/base.css
+++ b/base.css
@@ -150,6 +150,9 @@ blockquote {
     border-left: 3px solid var(--ucd-blue-10);
 }
 
+/* Comments */
+.comment { display: none }
+
 /*
  * Presenter mode
  */
