css: add gray color
Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/base.css
+++ b/base.css
@@ -120,6 +120,7 @@ li {
 
 /* Colored text */
 .red { color: red; }
+.gray { color: gray; }
 
 /* Two-column layout */
 .lcol { width: 49%; float: left; clear: left;}
