base.css: new column sizes, and new colors
Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/base.css
+++ b/base.css
@@ -128,6 +128,8 @@ li {
 .red { color: red; }
 .green { color: green; }
 .gray { color: gray; }
+.ucdblue { color: var(--ucd-blue-100); }
+.ucdgold { color: var(--ucd-gold-100); }
 
 /* Two-column layout */
 .lcol { width: 49%; float: left; clear: left;}
@@ -136,19 +138,23 @@ li {
 /* Subconfigurations */
 .lcol25 { width: 24%; float: left; clear: left;}
 .lcol33 { width: 32%; float: left; clear: left;}
+.lcol30 { width: 29%; float: left; clear: left;}
 .lcol40 { width: 39%; float: left; clear: left;}
 .lcol45 { width: 44%; float: left; clear: left;}
 .lcol55 { width: 54%; float: left; clear: left;}
 .lcol60 { width: 59%; float: left; clear: left;}
 .lcol66 { width: 65%; float: left; clear: left;}
+.lcol70 { width: 69%; float: left; clear: left;}
 .lcol75 { width: 74%; float: left; clear: left;}
 .rcol25 { width: 24%; float: right; clear: right;}
+.rcol30 { width: 29%; float: right; clear: right;}
 .rcol33 { width: 32%; float: right; clear: right;}
 .rcol40 { width: 39%; float: right; clear: right;}
 .rcol45 { width: 44%; float: right; clear: right;}
 .rcol55 { width: 54%; float: right; clear: right;}
 .rcol60 { width: 59%; float: right; clear: right;}
 .rcol66 { width: 65%; float: right; clear: right;}
+.rcol70 { width: 69%; float: right; clear: right;}
 .rcol75 { width: 74%; float: right; clear: right;}
 
 /* Footnotes */
