--- a/style/base.css
+++ b/style/base.css
@@ -6,7 +6,7 @@
 	 * use this import for browser rendering. For printing, we rely on these
 	 * fonts to be installed locally.
 	 */
-    @import 'style/fonts.css';
+    @import 'fonts.css';
 }
 
 html {
